Fix overlap with bookmark bar

--- a/sidebar-expand-on-hover/chrome.css
+++ b/sidebar-expand-on-hover/chrome.css
@@ -6,6 +6,14 @@
     #titlebar {
         margin-top: var(--zen-toolbar-height) !important;
     }
+    
+    #browser:has(#PersonalToolbar[collapsed=false]) #titlebar{
+        margin-top: calc(var(--zen-toolbar-height) + 2.2em) !important;
+    }
+}
+
+#PersonalToolbar[collapsed=false] {
+    height: 2.2em !important;
 }
 
 #tabbrowser-tabs {
